tests/snapshots/examples_fixtures/primop__all_primops.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/all_primops.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/primop/all_primops.flx:40:11
   |
40 |     print(first(arr2));
   |           ^^^^^

Hint:
  Define it first: let first = ...;


error[E004]: Undefined Variable

I can't find a value named `last`.

  examples/primop/all_primops.flx:41:11
   |
41 |     print(last(arr2));
   |           ^^^^

Hint:
  Define it first: let last = ...;


error[E004]: Undefined Variable

I can't find a value named `rest`.

  examples/primop/all_primops.flx:42:11
   |
42 |     print(rest(arr2));
   |           ^^^^

Hint:
  Define it first: let rest = ...;


error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/primop/all_primops.flx:48:11
   |
48 |     print(first(lst));
   |           ^^^^^

Hint:
  Define it first: let first = ...;


error[E004]: Undefined Variable

I can't find a value named `last`.

  examples/primop/all_primops.flx:49:11
   |
49 |     print(last(lst));
   |           ^^^^

Hint:
  Define it first: let last = ...;

Help:
  Did you mean `lst`?


error[E004]: Undefined Variable

I can't find a value named `rest`.

  examples/primop/all_primops.flx:50:11
   |
50 |     print(rest(lst));
   |           ^^^^

Hint:
  Define it first: let rest = ...;

Help:
  Did you mean `lst`?

Found 6 errors.
== stdout ==
<not executed>
